EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/05/2009==
gaeorn: (drakelord) Added slow migitation. Set npc_types.slow_mitigation with the portion of slow you want mitigated: 0 = 0%, 1 = 100%, .5 = 50%, etc.

Required SQL:

utils/sql/svn/745_slow_mitigation.sql

==07/03/2009==
KLS: Fix for AA reuse timer text.
KLS: Added rules to replace defines: Combat:MaxRampageTargets, Combat:MaxFlurryHits
KLS: Redid inner workings of rampage a bit to be more efficient memory wise and to hold an unlimited number of rampage targets instead of capping at 20.
KLS: Made ranged combat stuff virtual so I can implement npc ranged attacks tomorrow.
KLS: Added 3 perl functions for the mob scalar type: SetEntityVariable(id_num, var), GetEntityVariable(id_num) and EntityVariableExists(id_num), taking int32 for id_num and string for var. Allows someone to store as many variables on the entity being targeted as they would like.

==07/02/2009==
KLS: Berserker NPCs will now frenzy instead of kick.
KLS: Fix for GetHateRandom() method crash if there are 0 people on the hate list.
KLS: Repop force was broken when we went to the instancing system, it has now been fixed.
KLS: Updated #advnpcspawn to be able to edit respawn and variance timers of spawn points in game.

==07/01/2009==
AndMetal: Added rules for Sacrifice, which also corrects the minimum level you can use it on: Spells:SacrificeMinLevel(46), Spells:SacrificeMaxLevel(69), & Spells:SacrificeItemID(9963).
AndMetal: Switched to some more Message String IDs.
AndMetal: quest::scribespells can now accept minimum level as a 2nd argument. Examples: quest::scribespells(60,60) will scribe just level 60 spells, quest::scribespells(75,71) will scribe spells from 71 through 75.
AndMetal: Ditto with #scribespells, quest::traindiscs, & #traindiscs.